# pods.ptp.object-search.point-process-experiment-core

./: CMakeLists.txt  README
src/: data_io.cpp  data_io.hpp  experiment_runner.cpp  experiment_runner.hpp  experiment_utils.cpp  experiment_utils.hpp  geometry.cpp  geometry.hpp  simulated_data.cpp  simulated_data.hpp
test/: CMakeLists.txt  run-experiment.cpp  test-simulate-line-clusters-gaussian-poisson.cpp
